# vct

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  azure-pipeline-hosted.yml  vcpkg_x64-linux.txt  vcpkg_x64-osx.txt  vcpkg_x64-vs2019.txt
cmake/: FindGLFW.cmake
ext/include/: nuklear_glfw_gl3.h
ext/include/glad/: glad.h
ext/src/: glad.c
resources/nanosuit/: nanosuit.mtl
resources/sponza/: sponza.ArticulatedModel.Any  sponza.mtl  sponza_dds.mtl  sponza_small.mtl
resources/sponza/textures_dds/: Background_Albedo.dds  Background_Normal.dds  Background_Roughness.dds  ChainTexture_Albedo.dds  ChainTexture_Metallic.dds  ChainTexture_Normal.dds  ChainTexture_Roughness.dds  Lion_Albedo.dds  Lion_Normal.dds  Lion_Roughness.dds  Sponza_Arch_diffuse.dds  Sponza_Arch_normal.dds  Sponza_Arch_roughness.dds  Sponza_Bricks_a_Albedo.dds  Sponza_Bricks_a_Normal.dds  Sponza_Bricks_a_Roughness.dds  Sponza_Ceiling_diffuse.dds  Sponza_Ceiling_normal.dds  Sponza_Ceiling_roughness.dds  Sponza_Column_a_diffuse.dds  Sponza_Column_a_normal.dds  Sponza_Column_a_roughness.dds  Sponza_Column_b_diffuse.dds  Sponza_Column_b_normal.dds  Sponza_Column_b_roughness.dds  Sponza_Column_c_diffuse.dds  Sponza_Column_c_normal.dds  Sponza_Column_c_roughness.dds  Sponza_Curtain_Blue_diffuse.dds  Sponza_Curtain_Green_diffuse.dds  Sponza_Curtain_Red_diffuse.dds  Sponza_Curtain_Red_normal.dds  (+35 more)
resources/sponza2/: sponza.mtl
shaders/: clear.comp  common.glsl  debugVoxels.frag  debugVoxels.geom  debugVoxels.vert  debugVoxelsTesselated.geom  dither.frag  empty.frag  filter2d.comp  filter3d.comp  filterRadiance.comp  generateWarpmap.frag  generateWarpmap.geom  generateWarpmapWeights.frag  injectRadiance.comp  mandelbrot.comp  normalizeVoxels.comp  phong.frag  phong.vert  phongVoxel.frag  quad.vert  raymarch.frag  reflectiveShadowMap.frag  setVoxelOpacity.comp  simple.frag  simple.vert  simpleTesselated.vert  temporalRadianceFilter.comp  testTesselation.frag  testTesselation.tesc  testTesselation.tese  testWarpTexture.frag  transferVoxels.comp  use_rgba16f.glsl  voxelFillHoles.comp  voxelize.frag  voxelize.geom  voxelize.vert
src/: Actor.h  Application.cpp  Application.h  Camera.cpp  Camera.h  Overlay.cpp  Overlay.h  ResourceLoader.h  Scene.cpp  Scene.h  TimerQueries.h  Transform.h  common.h  log.h  main.cpp  nuklear_glfw_gl3.h
src/Graphics/: GLBuffer.cpp  GLBuffer.h  GLCubemap.cpp  GLCubemap.h  GLFramebuffer.cpp  GLFramebuffer.h  GLHelper.cpp  GLHelper.h  GLQuad.cpp  GLQuad.h  GLShader.cpp  GLShader.h  GLShaderProgram.cpp  GLShaderProgram.h  GLTexture.cpp  GLTexture.h  GLTexture2D.h  GLTimer.h  GLVertexArrayObject.cpp  GLVertexArrayObject.h  Mesh.cpp  Mesh.h  opengl.h
src/Input/: GLFWHandler.cpp  GLFWHandler.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
